M3 优化投票逻辑

--- a/docs/需求.md
+++ b/docs/需求.md
@@ -17,23 +17,14 @@
 
 资料分享区
 
-帖子卡片交互（仿 Reddit）：
-- 点赞 / 点踩 + 分值显示（初始 0，需持久化）
-- 评论按钮 + 评论数
-- Award（消耗用户资源）
-- 分享（复制链接）
-
 用户主页,头像和背景自定义
 
-我想做一个所有人推荐歌单播放的功能
+我想加一个用户自定义词条打分,所有用户都可以新加此条打分并评论
 
-我想做一个用户添加词条,所有人都能对它打分和发表评论的功能
+移动端我想加一个共享音乐播放器歌单,全员上传,投票切歌
 
-我想让所有评论都能发图片和视频
+评论要可以引用站内元素
 
-分享里面有链接跳转,还有embed,功能
-
-发表帖子有引用站内其他元素的功能
 ## 这个demo最后要做到上线
 
 最短可上线的 MVP 功能清单
@@ -43,7 +34,7 @@
 
 帖子：发、删（软删）、列表、详情
 
-评论：发、删（软删）
+评论：发、删（软删）、楼中楼（parent_id）
 
 访问控制：游客可看 / 登录可发
 
@@ -52,7 +43,7 @@
 举报入口 + 管理员处理（最简后台也行）
 
 日志：每个请求记录 userId、ip、耗时、状态码
-
+ 
 ### P1（强烈建议）
 
 图片上传（对象存储）
