--- a/docs/需求.md
+++ b/docs/需求.md
@@ -1,68 +1,44 @@
-## 前端重构
+## 项目需求（更新至 2026-01）
 
-把各种模块页面分开来,
-把各板块做得更美观合理可用
+### 已完成
 
-## 注册登录
+- 账号体系（注册/登录）
+- 帖子/评论基础功能（列表、详情、发布、删除）
+- 富文本编辑器 + 图片上传
+- 举报入口 + 管理员处理
+- 用户主页（头像/封面/简介）
+- 关注/粉丝统计 + 列表
+- 聊天室（WebSocket）
 
+### 待完成
 
+- 搜索（标题/正文 like → 全文索引）
+- 置顶/热门
+- 站内通知（被评论/被回复）
+- 课程/考试/校园网自动登录
+- 共享音乐播放器（移动端）
+- 自定义词条打分
+- 评论引用站内元素
+- 编辑器回复图片显示逻辑进一步优化
 
-## 功能划分
+### MVP（P0）
 
-目前准备有类似贴吧,reddit的发帖,帖子要分板块.用户可以申请开新板块,可以在板块加qq群
+- 账号体系
+- 帖子与评论
+- 游客可看 / 登录可发
+- 发帖/评论限流
+- 举报与管理
+- 请求日志
 
-聊天室:可以弄几个
+### P1（建议）
 
-课表,考试,校园网自动登录
-
-资料分享区
-
-用户主页,头像和背景自定义
-用户主页关注/粉丝列表,展示关注数与粉丝数
-
-我想加一个用户自定义词条打分,所有用户都可以新加此条打分并评论
-
-移动端我想加一个共享音乐播放器歌单,全员上传,投票切歌
-
-评论要可以引用站内元素
-
-编辑器回复帖子图片显示逻辑仍需修正
-
-## 这个demo最后要做到上线
-
-最短可上线的 MVP 功能清单
-### P0
-
-账号体系：短信/邮箱（先邮箱也行）或校内统一认证（以后再接）
-
-帖子：发、删（软删）、列表、详情
-
-评论：发、删（软删）、楼中楼（parent_id）
-
-访问控制：游客可看 / 登录可发
-
-基础反滥用：发帖/评论限流（按 IP + 用户）
-
-举报入口 + 管理员处理（最简后台也行）
-
-日志：每个请求记录 userId、ip、耗时、状态码
-
-编辑帖子和评论的富文本编辑器有问题
- 
-### P1（强烈建议）
-
-图片上传（对象存储）
-
-搜索（先标题/正文简单 like，再上全文索引）
-
-置顶/热门（运营抓手）
-
-站内通知（被评论/被回复）
+- 图片上传（对象存储）
+- 搜索
+- 置顶/热门
+- 站内通知
 
 ### P2（聊天室）
 
-先做“帖子下实时讨论”而不是“全站聊天室”
-
-WebSocket 会话鉴权 + 限流 + 内容过滤
-
-消息持久化策略（最开始可以只存最近 N 条）
+- 帖子下实时讨论（替代全站聊天室）
+- WebSocket 会话鉴权 + 限流 + 内容过滤
+- 消息持久化策略
