feat:新增搜索功能和通知列表

--- a/docs/需求.md
+++ b/docs/需求.md
@@ -9,12 +9,12 @@
 - 用户主页（头像/封面/简介）
 - 关注/粉丝统计 + 列表
 - 聊天室（WebSocket）
+- 搜索（帖子标题/正文、用户昵称）
+- 站内通知（被评论/被回复/被关注/被点赞）
 
 ### 待完成
 
-- 搜索（标题/正文 like → 全文索引）
 - 置顶/热门
-- 站内通知（被评论/被回复）
 - 课程/考试/校园网自动登录
 - 共享音乐播放器（移动端）
 - 自定义词条打分
