--- a/docs/需求.md
+++ b/docs/需求.md
@@ -11,10 +11,16 @@
 - 聊天室（WebSocket）
 - 搜索（帖子标题/正文、用户昵称）
 - 站内通知（被评论/被回复/被关注/被点赞）
+- 用户经验与等级称号
+- 帖子热门排序（最新/热门切换）
+- 帖子浏览量统计
+- 评论楼层号（仅顶层）
+- 评论历史跳转到指定楼层
+- 请求日志（按天切分）
 
 ### 待完成
 
-- 置顶/热门
+- 置顶
 - 课程/考试/校园网自动登录
 - 共享音乐播放器（移动端）
 - 自定义词条打分
